update media unit test